# ml-zc

./: .gitignore  README.md  pyproject.toml
01-intro/hw/: hw.ipynb  hw.md
02-regression/hw/: hw.ipynb  hw.md
03-classification/hw/: hw.ipynb  hw.md
04-evaluation/hw/: hw.ipynb  hw.md
05-deployment/hw/: Dockerfile  hw.ipynb  hw.md  predict.py  pyproject.toml  score_q3.py  score_q4.py
05-deployment/workshop/: Dockerfile  README.md  marketing.py  ping.py  predict.py  pyproject.toml  train.py  workshop-uv-fastapi.ipynb
